--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.11",
     "chart.js": "^4.4.3",
     "gridstack": "^10.2.0",
+    "ngx-spinner": "^17.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.1",
